@@ -1,2 +1,13 @@
 # HelloFX
 记录了我学习JavaFX的历程，也可以作为你学习的参考资料
+
+## Maven
+首先，这是一个简单的Maven项目  
+在任何支持Maven的IDE中打开即可使用
+
+## JavaFX
+其次，这是一个简单的OpenJFX项目  
+在JVM启动参数中添加  
+` --module-path "你的OpenJFX目录\javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.fxml `
+
+即可正常启动程序
